# pet_project_final/openapi/openapi.yaml
@@ -44,27 +44,6 @@ paths:
                 $ref: '#/components/schemas/Task'
         '404':
           description: User not found
-  /tasks/{user_id}:
-    get:
-      summary: Get all tasks by user_id
-      tags:
-        - tasks
-      parameters:
-        - name: user_id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: uint
-      responses:
-        '200':
-          description: A list of tasks for User by user_id
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Task'
   /tasks/{id}:
     patch:
       summary: Patch task by id
@@ -139,6 +118,29 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+  /users/{user_id}/tasks:
+    get:
+      summary: Get all tasks by user_id
+      tags:
+        - users
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: A list of tasks for User by user_id
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+        '404':
+          description: User not found
   /users/{id}:
     patch:
       summary: Patch user by id
